--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/react-transition-group": "^4.4.0",
     "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
@@ -16,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
